# online_learning_platform

./: .env.sample  .pre-commit-config.yaml  docker-compose.yaml  pgadmin.json  pyproject.toml
api/auth/: auth.py
api/course/: course.py
api/movie/: movie.py
api/user/: user.py
app/admin/: admin.py
app/auth/: model.py
app/base/: model.py
app/course/: model.py
app/enroll/: model.py
app/movie/: tables.py
app/user/: model.py
conf/: database.py  server.py  settings.py
database/: .gitignore  pyproject.toml  test.sh
database/base/: admin.py  models.py
database/config/: db_route.py  env.py  settings.py
database/course/: admin.py  models.py
database/course/migrations/: 0001_initial.py
database/course/sql/: 0002_auto_20240428_0934.py  insert_trigger.sql
database/enroll/: admin.py  models.py
database/enroll/migrations/: 0001_initial.py
database/migrations/: env.py
database/migrations/versions/: 4174a3032df1_initial_001.py  74ac19c80258_initial_001.py  cd624747b9d5__001.py
database/models/: course.py
database/sql/: course_before_insert_update_trigger.sql  enroll_before_insert_update_trigger.sql  read.py
database/user/: admin.py  models.py
database/user/migrations/: 0001_initial.py
docker/: pgadmin.sh  postgresql.sh  redis.sh
