[tool.poetry]
name = "online_learning_platform"
version = "0.1.0"
description = "Online Learning Platform"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
granian = "^1.2.3"
loguru = "^0.7.2"
email-validator = "^2.1.1"
orjson = "^3.10.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"




[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
