[tool.poetry]
name = "online_learning_platform"
version = "0.1.0"
description = "Online Learning Platform"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
granian = {extras = ["reload"], version = "^1.3.2"}
loguru = "^0.7.2"
email-validator = "^2.1.1"
orjson = "^3.10.3"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
pydantic-async-validation = "^0.1.4"
fastapi-pagination = "^0.12.24"




[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
